# crypto_test

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  apresentation.md  docker-compose.yml  justfile  rest.rest
.github/workflows/: crypto_social_db.yml  token_price.yml
.sqlx/: query-15631dfc71d2c0b1a3bbfbea825f75e05ba3b7052d78f16249a7ed28e0119760.json
crates/crypto_social_db/: Cargo.toml  Dockerfile
crates/crypto_social_db/src/: main.rs  user_follow.rs  websocket.rs
crates/crypto_social_db/src/apis/: mod.rs  profile_handlers.rs  user_handlers.rs
crates/crypto_social_db/src/models/: mod.rs  tokens.rs  user_follows.rs  user_stats.rs
crates/crypto_social_db/src/services/: mod.rs  notification_service.rs  profile_service.rs  user_service.rs
crates/crypto_social_db/src/workers/: mod.rs  notification_workers.rs
crates/token_price/: Cargo.toml  Dockerfile  README.md
db/migrations/: 20241022164830_start-social-tables.sql
migrations/: 20241020011523_start-social-tables.down.sql  20241020011523_start-social-tables.up.sql  20241020013410_create-views-for-social-tables.down.sql  20241020013410_create-views-for-social-tables.up.sql  20241020200057_create-trigger-to-notify-comments.down.sql  20241020200057_create-trigger-to-notify-comments.up.sql
scripts/: setup.dev.sh
social/crates/social-service/: Cargo.toml  Dockerfile
social/crates/social-service/.sqlx/: query-c8a199ae2fbb33ee4eba7ab9166d98805f67053b43c394d0d4edd80103251517.json
social/crates/social-service/db/migrations/: 20241022164830_start-social-tables.sql
social/crates/social-service/migrations/: 20241022164830_start-social-tables.sql  20241112162838_add_token_pick_notification.sql
social/crates/social-service/src/: container.rs  lib.rs  main.rs  pg_listeners.rs  settings.rs
social/crates/social-service/src/apis/: group_handlers.rs  mod.rs  profile_handlers.rs  token_handlers.rs  user_handlers.rs
social/crates/social-service/src/apis/api_models/: common.rs  mod.rs  query.rs  request.rs  response.rs  sorts.rs
social/crates/social-service/src/apis/middlewares/: security.rs
social/crates/social-service/src/events/: handlers.rs  listeners.rs  mod.rs  types.rs
social/crates/social-service/src/events/handlers/: mod.rs  token_pick.rs
social/crates/social-service/src/external_services/: mod.rs
social/crates/social-service/src/external_services/birdeye/: mod.rs  multi_price.rs  multi_volume.rs  ohlcv.rs
social/crates/social-service/src/external_services/cielo/: aggregated_wallet.rs  mod.rs
social/crates/social-service/src/external_services/ext_data_services_v1/: mod.rs
social/crates/social-service/src/external_services/ext_data_services_v1/token_data/: mod.rs  report.rs  types.rs
social/crates/social-service/src/external_services/rust_monorepo/: get_latest_w_metadata.rs  mod.rs
social/crates/social-service/src/external_services/usergate/: mod.rs  user_trading_stats.rs
social/crates/social-service/src/jobs/: mod.rs  token_picks.rs
social/crates/social-service/src/models/: groups.rs  medals.rs  mod.rs  picks.rs  profiles.rs  tiers.rs  token_picks.rs  tokens.rs  user_comments.rs  user_follows.rs  user_stats.rs  users.rs
social/crates/social-service/src/repositories/: group_repository.rs  mod.rs  token_repository.rs  user_repository.rs
social/crates/social-service/src/services/: cache_service.rs  group_service.rs  mod.rs  profile_service.rs  redis_service.rs  s3_service.rs  telegram_service.rs  token_service.rs  user_service.rs
social/crates/social-service/src/utils/: api_errors.rs  math.rs  mod.rs  redis_keys.rs  serde_utils.rs  time.rs
social/crates/social-service/src/utils/errors/: app_error.rs  error_payload.rs  mod.rs
src/: cli.rs  main.rs
src/apis/: user_handlers.rs
src/models/: mod.rs  token_calls.rs  user_follows.rs  users.rs
src/repositories/: user_repository.rs
src/services/: user_service.rs
