[package]
name = "crypto_social_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.30.0"
inquire = "0.7.5"
fake = { version = "2.5", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
	"runtime-tokio",
	"tls-native-tls",
	"postgres",
	"chrono",
	"uuid",
	"rust_decimal",
] }
utoipa = { version = "5.1.1", features = ["axum_extras", "uuid"] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
utoipa-axum = { version = "0.1.0" }
headers = "0.4"

[dev-dependencies]
rstest = "0.23.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[[bin]]
name = "seed"
seed = "bin/seed.rs"
