[workspace]
members = [
    "crates/crypto_social_db",
    "crates/token_price",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.0", features = ["full"] }
dotenv = "0.15.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.30.0"
inquire = "0.7.5"
fake = { version = "2.5", features = ["derive"] }
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
serde = { version = "1.0.213", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
] }
redis = { version = "0.27.5", features = ["tokio-comp"] }
futures-util = { version = "0.3.31", features = ["async-await-macro"] }
serde_json = { version = "1.0.105" }
utoipa = { version = "5.1.2", features = ["axum_extras", "uuid"] }
tokio-tungstenite = { version = "0.24.0" }
utoipa-axum = { version = "0.1.0" }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
