[package]
name = "crypto_social_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
inquire = { workspace = true }
fake = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-axum = { workspace = true }
futures-util = { workspace = true }
redis = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = "0.23.0"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[[bin]]
name = "seed"
seed = "bin/seed.rs"
