
[package]
name = "token_price"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
