[package]
name = "social-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-axum = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }

[dev-dependencies]
