[package]
name = "social-service"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "5.1.2", features = ["axum_extras", "uuid", "decimal", "chrono"] }
utoipa-axum = { version = "0.1.0" }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
tokio = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true }

[dev-dependencies]
