[package]
name = "social-service"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "5.1.2", features = ["axum_extras", "uuid", "decimal", "chrono"] }
utoipa-axum = { version = "0.1.0" }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
tokio = { workspace = true }
dotenv = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
teloxide = "0.13.0"
async-trait = { workspace = true }
urlencoding = "2.1"
rayon = "1.10.0"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-types = "1.1.7"
bytes = "1.5.0"
image = "0.25.5"
once_cell = "1.18"

tokio-util = { version = "0.7.11", features = ["io"] }
[dev-dependencies]
